--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
 body {
-  margin: 0;
+  margin: 0 auto;
+  padding: 0;
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  border: 1px solid black;
+  width: 90%;
 }
 
 code {
