--- a/src/components/common/Header/Header.css
+++ b/src/components/common/Header/Header.css
@@ -1,6 +1,9 @@
 header {
-    background-color: antiquewhite;
+    background: rgb(195,1,148);
+    background: linear-gradient(94deg, rgba(195,1,148,1) 0%, rgba(190,0,255,1) 100%);
     padding: 10px;
+    color: white;
+    font-family: Lato;
 }
 
 h1 {
@@ -8,7 +11,7 @@ h1 {
 }
 
 h3 {
-    margin: 0;
+    margin: 15px 0 0;
 }
 
 .header__list {
@@ -16,7 +19,14 @@ h3 {
     justify-content: center;
 }
 
-.header__item {
+.header__item,
+.header__item * {
     list-style: none;
     margin: 0 10px;
+    text-decoration: none;
+}
+
+.header__item:hover * {
+    color: white;
+    transition: all 0.3s linear;
 }
