--- a/src/components/QuizMaker/QuizMaker.css
+++ b/src/components/QuizMaker/QuizMaker.css
@@ -4,3 +4,15 @@
     flex-direction: column;
     align-items: center;
 }
+
+.newQuizForm > * {
+    display: block;
+    margin-bottom: 10px;
+}
+
+.create-button {
+    padding: 5px;
+    cursor: pointer;
+    text-transform: uppercase;
+    margin-top: 15px;
+}
