--- a/src/components/QuizMaker/QuizMaker.css
+++ b/src/components/QuizMaker/QuizMaker.css
@@ -10,6 +10,27 @@
     margin-bottom: 10px;
 }
 
+.label {
+    font-weight: bold;
+}
+
+.quizInfoLabel {
+    width: 80%;
+    display: grid;
+    grid-template-columns: 1fr 1fr
+}
+.quizInfoLabel > span {
+    padding: 5px;
+}
+
+.quizInfoLabel > .label {
+    text-align: right;
+}
+
+.quizInfoLabel > .input {
+    text-align: left;
+}
+
 .create-button {
     padding: 5px;
     cursor: pointer;
