--- a/src/components/common/Footer/Footer.css
+++ b/src/components/common/Footer/Footer.css
@@ -1,7 +1,18 @@
 footer {
-    background: rgb(195,1,148);
-    background: linear-gradient(94deg, rgba(195,1,148,1) 0%, rgba(190,0,255,1) 100%);
+    /*background: rgb(195,1,148);*/
+    /*background: linear-gradient(94deg, rgba(195,1,148,1) 0%, rgba(190,0,255,1) 100%);*/
+    background-color: var(--cerulean);
     padding: 10px;
     color: white;
     font-family: Lato;
+}
+
+footer a {
+    color: var(--jonquil);
+    text-decoration: none;
+}
+
+footer a:hover {
+    color: white;
+    border-bottom: 2px solid white;
 }
