--- a/src/components/common/Header/Header.css
+++ b/src/components/common/Header/Header.css
@@ -1,17 +1,28 @@
+:root {
+    --pacific-cyan: #06aed5ff;
+    --cerulean: #086788ff;
+    --jonquil: #f0c808ff;
+    --papaya-whip: #fff1d0ff;
+    --rojo: #dd1c1aff;
+}
+
 header {
-    background: rgb(195,1,148);
-    background: linear-gradient(94deg, rgba(195,1,148,1) 0%, rgba(190,0,255,1) 100%);
-    padding: 10px;
+    /*background: rgb(195,1,148);*/
+    background-color: var(--pacific-cyan);
+    background: linear-gradient(90deg, var(--pacific-cyan) 0%, var(--cerulean) 90%);
+    padding: 20px;
     color: white;
     font-family: Lato;
 }
 
 h1 {
     margin: 0;
+    color: var(--papaya-whip)
 }
 
 h3 {
-    margin: 15px 0 0;
+    margin: 20px 0;
+    color: var(--papaya-whip)
 }
 
 .header__list {
@@ -24,9 +35,13 @@ h3 {
     list-style: none;
     margin: 0 10px;
     text-decoration: none;
+    color: var(--papaya-whip);
+    font-size: 1.5rem;
 }
 
 .header__item:hover * {
-    color: white;
-    transition: all 0.3s linear;
+    color: var(--rojo);
+    transition: all 0.2s linear;
+    border-bottom: 2px solid var(--rojo);
+
 }
