Add developer note to Quiz component, informing about currently non-functional quiz taking feature

--- a/src/components/Quiz/Quiz.css
+++ b/src/components/Quiz/Quiz.css
@@ -11,3 +11,14 @@
     padding: 3px 5px;
     cursor: pointer;
 }
+
+.developer-note {
+    margin: 40px;
+}
+
+.developer-note span {
+    color: crimson;
+    border: 2px dashed crimson;
+    padding: 10px;
+    border-radius: 5px;
+}
